# poppler-devanagari

./: .gitignore  CMakeLists.txt  CMakeSettings.json
test/: CMakeLists.txt  htmlstring-common.hpp  test-devanagari.cc  test-htmlstring.cc
utils/: CMakeLists.txt  HtmlOutputDev.cc  HtmlOutputDev.h  devanagari.cc  devanagari.h  pdftohtml.cc
